--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
     <div class="text">Jordynn Otto</div>
   </div>
 
-  <!-- <div class="container"> -->
-
   <!-- about me -->
   <div id="about">
     <h2 id="title">
@@ -75,7 +73,7 @@
     <!-- bio -->
     <div class="row">
       <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-      <div class="col-lg-8 col-md-12">
+      <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
         <p id="summary">
           I am Jordynn, a full-stack web developer with talents highlighted in front-end development. A woman of passion
           thriving off of both new knowledge and
@@ -87,7 +85,7 @@
           application interface to not only make UI an experience, but overall a full cohesive journey.
         </p>
       </div>
-      <div class="col-lg-4 col-md-12">
+      <div class="col-lg-4 col-sm-12 col-md-12 col-xs-12">
         <img class="headshot" src="images/Jordyn24389_edit-2.jpg">
       </div>
     </div>
@@ -101,7 +99,6 @@
     <hr>
     <!-- projects -->
     <div class="row" id="projectcards">
-      <!-- <div class="col-6"> -->
       <div class="card-group">
         <!-- Ballads and brews -->
         <div class="card">
@@ -215,8 +212,7 @@
         </div>
       </div>
     </div>
-    <!-- </div> -->
-  </div>
+    <!-- closing portfolio -->
   </div>
 
   <!-- skills -->
@@ -226,82 +222,78 @@
 
   <center>
     <div class="container">
-      <div class="row" id="skillsrowone">
-        <div class="col-md-1 col-xs-0"></div>
-        <div class="col-md-2 col-xs-6">
-          <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">HTML</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">CSS</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <!-- <i class="fab fa-bootstrap"></i> -->
-          <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
-          <br>
-          <p class="contacttext">Bootstrap</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <!-- <i class="fab fa-js-square"></i> -->
-          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">Javascript</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">APIs</p>
-        </div>
-
-        <div class="col-md-1 col-xs-0"></div>
-
+      <!-- <div class="row" id="skillsrowone"> -->
+      <div class="col-md-1 col-xs-0"></div>
+      <div class="col-md-2 col-xs-6">
+        <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">HTML</p>
       </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">CSS</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
+        <br>
+        <p class="contacttext">Bootstrap</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">Javascript</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">APIs</p>
+      </div>
+
+      <!-- <div class="col-md-1 col-xs-0"></div> -->
+
+      <!-- </div> -->
+
+      <!-- <div class="row" id="skillsrow"> -->
+      <div class="col-md-1 col-xs-0"></div>
+      <div class="col-md-2 col-xs-6">
+        <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">MongoDB/Mongoose</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">mySQL/Sequelize</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">nodeJS/Express</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">React</p>
+      </div>
+
+      <div class="col-md-2 col-xs-6">
+        <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">Photoshop</p>
+      </div>
+
+      <!-- <div class="col-md-1"></div> -->
+      <!-- </div> -->
     </div>
-
-      <div class="row" id="skillsrow">
-        <div class="col-md-1 col-xs-0"></div>
-        <div class="col-md-2 col-xs-6">
-          <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">MongoDB/Mongoose</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">mySQL/Sequelize</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">nodeJS/Express</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">React</p>
-        </div>
-
-        <div class="col-md-2 col-xs-6">
-          <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">Photoshop</p>
-        </div>
-
-        <div class="col-md-1"></div>
-      </div>
   </center>
-  <!-- end of web portfolio div -->
-  </div>
 
   <!-- art portfolio -->
   <div id="artPage">
@@ -312,22 +304,22 @@
 
     <!-- photos -->
     <div class="row" id="photoone">
-      <div class="col-md-6 col-xs-5">
+      <div class="col-md-5 col-xs-12">
         <img src="images/Screen Shot 2019-06-11 at 9.44.16 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
-      <div class="col-md-6 col-xs-5">
+      <div class="col-md-5 col-xs-12">
         <img src="images/Screen Shot 2019-06-11 at 9.45.56 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
     </div>
 
     <div class="row" id="phototwo">
-      <div class="col-md-6 col-xs-5">
+      <div class="col-md-5 col-xs-12">
         <img src="images/Screen Shot 2019-06-11 at 9.47.15 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
-      <div class="col-md-6 col-xs-5">
+      <div class="col-md-5 col-xs-12">
         <img src="images/Screen Shot 2019-06-11 at 9.46.37 PM.png" class="d-inline-block w-100"
           alt="Image of Jordynn's modeling.">
       </div>
@@ -357,7 +349,7 @@
     </h2>
     <hr>
 
-    <h5 class="contact">I would love to hear from you.</h4>
+    <h5 class="contact">I would love to hear from you.</h5>
 
       <div class="row" id="contactrowone">
         <div class="col-2 col-xs-0"></div>
@@ -367,7 +359,7 @@
           <p class="contacttext">206-909-5153</p>
         </div>
 
-        <div class="col-md-4 col-xs-3">
+        <div class="col-md-2 col-xs-3">
           <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
           <br>
           <p class="contacttext">jordynn.otto@gmail.com</p>
@@ -377,25 +369,26 @@
 
 
       <div class="row" id="row1">
-        <div class="col-md-4 col-xs-3">
+        <div class="col-md-1"></div>
+        <div class="col-md-3 col-xs-3">
           <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink" target="_blank">Linkedin</a>
         </div>
 
-        <div class="col-md-4 col-xs-3">
+        <div class="col-md-3 col-xs-3">
           <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="https://github.com/jottobot" id="contactlink" target="_blank">Github</a>
         </div>
 
-        <div class="col-md-4 col-xs-3">
+        <div class="col-md-3 col-xs-3">
           <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
           <br>
           <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
         </div>
+        <div class="col-md-2"></div>
       </div>
-
   </div>
 
   <!-- jQuery -->
