js and formatting of skills

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     <div class="text">Jordynn Otto</div>
   </div>
 
+  <!-- <div class="container"> -->
+
   <!-- about me -->
   <div id="about">
     <h2 id="title">
@@ -221,77 +223,76 @@
   </h3>
 
   <center>
-    <div class="container">
-      <!-- <div class="row" id="skillsrowone"> -->
-      <div class="col-md-1 col-xs-0"></div>
-      <div class="col-md-2 col-xs-6">
-        <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">HTML</p>
+      <div class="container">
+      <div>
+        <div class="col-md-1 col-xs-0"></div>
+        <div class="col-md-2 col-xs-4">
+          <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">HTML</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">CSS</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
+          <br>
+          <p class="contacttext">Bootstrap</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
+          <br>
+          <p class="contacttext" >Javascript</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext" >APIs</p>
+        </div>
+
+        <div class="col-md-1 col-xs-4"></div>
       </div>
 
-      <div class="col-md-2 col-xs-6">
-        <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">CSS</p>
+      <div>
+        <div class="col-md-1 col-xs-0"></div>
+        <div class="col-md-2 col-xs-4">
+          <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">MongoDB/Mongoose</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">mySQL/Sequelize</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">nodeJS/Express</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext">React</p>
+        </div>
+
+        <div class="col-md-2 col-xs-4">
+          <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
+          <br>
+          <p class="contacttext" >Photoshop</p>
+        </div>
+
+        <div class="col-md-1"></div>
       </div>
-
-      <div class="col-md-2 col-xs-6">
-        <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
-        <br>
-        <p class="contacttext">Bootstrap</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">Javascript</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">APIs</p>
-      </div>
-
-      <!-- <div class="col-md-1 col-xs-0"></div> -->
-
-      <!-- </div> -->
-
-      <!-- <div class="row" id="skillsrow"> -->
-      <div class="col-md-1 col-xs-0"></div>
-      <div class="col-md-2 col-xs-6">
-        <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">MongoDB/Mongoose</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">mySQL/Sequelize</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">nodeJS/Express</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">React</p>
-      </div>
-
-      <div class="col-md-2 col-xs-6">
-        <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
-        <br>
-        <p class="contacttext">Photoshop</p>
-      </div>
-
-      <!-- <div class="col-md-1"></div> -->
-      <!-- </div> -->
     </div>
   </center>
 
@@ -351,44 +352,44 @@
 
     <h5 class="contact">I would love to hear from you.</h5>
 
-      <div class="row" id="contactrowone">
-        <div class="col-2 col-xs-0"></div>
-        <div class="col-md-4 col-xs-3">
-          <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">206-909-5153</p>
-        </div>
-
-        <div class="col-md-2 col-xs-3">
-          <i class="fa fa-envelope" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <p class="contacttext">jordynn.otto@gmail.com</p>
-        </div>
-        <div class="col-2 col-xs-0"></div>
+    <div class="row" id="contactrowone">
+      <div class="col-2 col-xs-0"></div>
+      <div class="col-md-4 col-xs-3">
+        <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
+        <br>
+        <p class="contacttext">206-909-5153</p>
       </div>
 
-
-      <div class="row" id="row1">
-        <div class="col-md-1"></div>
-        <div class="col-md-3 col-xs-3">
-          <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
-          <br>
-          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink" target="_blank">Linkedin</a>
-        </div>
-
-        <div class="col-md-3 col-xs-3">
-          <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
-          <br>
-          <a href="https://github.com/jottobot" id="contactlink" target="_blank">Github</a>
-        </div>
-
-        <div class="col-md-3 col-xs-3">
-          <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
-          <br>
-          <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
-        </div>
-        <div class="col-md-2"></div>
+      <div class="col-md-2 col-xs-3">
+        <i class="fa fa-envelope" style="font-size:52px" id="contacticon1"></i>
+        <br>
+        <p class="contacttext">jordynn.otto@gmail.com</p>
       </div>
+      <div class="col-2 col-xs-0"></div>
+    </div>
+
+
+    <div class="row" id="row1">
+      <div class="col-md-1"></div>
+      <div class="col-md-3 col-xs-3">
+        <i class='fab fa-linkedin' style="font-size:48px" id="contacticon"></i>
+        <br>
+        <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" id="contactlink" target="_blank">Linkedin</a>
+      </div>
+
+      <div class="col-md-3 col-xs-3">
+        <i class='fab fa-github' style="font-size:48px" id="contacticon"></i>
+        <br>
+        <a href="https://github.com/jottobot" id="contactlink" target="_blank">Github</a>
+      </div>
+
+      <div class="col-md-3 col-xs-3">
+        <i class="fa fa-file-text" style="font-size:48px" id="contacticon"></i>
+        <br>
+        <a href="assets/Jordynn Otto Resume.pdf" id="contactlink" target="_blank">Resume</a>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
 
   <!-- jQuery -->
