bio, skills, contact, styling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link" id="art" href="#">Art Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="contact" href="#">Contact</a>
+          <a class="nav-link" id="contactt" href="#">Contact</a>
         </li>
       </ul>
       <span class="navbar-text" id="spanid">
@@ -74,9 +74,54 @@
     <hr>
     <!-- bio -->
     <div class="row">
-      <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
+      <div class="col-lg-4 col-sm-12 col-md-12 col-xs-12">
+        <img class="headshot" src="images/Jordyn24389_edit-2.jpg">
+      </div>
       <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
         <p id="summary">
+          Jordynn Otto is a Seattle born and Los Angeles bred woman of many talents. Currently, she is focused on her
+          career in front-end web development. Her clients span across colleagues, friends and referrals and she prides
+          herself on turning the client's wants into a fulfilled cohesive application. Jordynn has a unique and fresh
+          eye for
+          design which marries her perfectionist and detailed-oriented personality eloquently. Communicating with others
+          is joyous for Jordynn due to her bubbly, outgoing sense of self.
+
+          <!-- Jordynn Otto is a Seattle born and Los Angeles bred woman of many talents. Currently, she is focused on her career in front-end web development. Her clients span across colleagues, friends and referrals and she prides herself on turning the client's wants into a fulfilled cohesive application. Jordynn has a unique and fresh eye for design, which marries her perfectionist and detailed-oriented personality eloquently. Communicating with others is joyous for Jordynn due to her bubbly, outgoing sense of self. -->
+
+          <br>
+          <br>
+      </div>
+      <div class="col">
+        <p id="summary">
+          Post cum laude college graduation from Loyola Marymount University, Jordynn lived and worked in Los Angeles as
+          a professional dancer. Her career experience includes, but is not limited to, dancing for Disney Channel,
+          foregin hip-hop artists, local
+          jazz clubs, commercials and feature films. Even though her career was booming, Jordynn strongly believes in
+          maximizing her potential and she soon
+          learned how
+          to shoot dance photography and teach Pure Barre, a group fitness class for adults. By 2018, she felt like her
+          professional career was missing a mental push, somethign to challenge her intellectually every day. So, in
+          pure Jordynn demeanor,
+          she moved back home to Seattle and enrolled, and completed, in a full-stack web development course.
+        </p>
+        <br>
+        <br>
+        <p class="textquote">
+          "How you do anything, is how you do everything."
+        </p>
+        <br>
+        <br>
+        <p id="summary">
+          Jordynn would be an irreplacable asset to any front-end engineering team with her combined development tools,
+          artistic skills and communication expertise. Focusing on detail, yet being a flexible and easy group memeber
+          sets her
+          apart from other developers due to her immense imersion in the arts. Jordynn is passionate about everything
+          she does and tends to go above and beyound what is asked of her. From dancer, photographer, fitness
+          instructor, and now software enginner, let Jordynn take care of any of your devlopement needs.
+        </p>
+      </div>
+
+      <!-- <p>
           I am Jordynn, a full-stack web developer with talents highlighted in front-end development. A woman of passion
           thriving off of both new knowledge and
           success in known ventures, I blindly dove into software engineering after a victorius career in arts and
@@ -85,12 +130,9 @@
           eloquent UI design, and communcation with non-developers and developers alike. I will bring a new, fresh
           perspective to
           application interface to not only make UI an experience, but overall a full cohesive journey.
-        </p>
-      </div>
-      <div class="col-lg-4 col-sm-12 col-md-12 col-xs-12">
-        <img class="headshot" src="images/Jordyn24389_edit-2.jpg">
-      </div>
+        </p> -->
     </div>
+    <a href="mailto:jordynn.otto@gmail.com?Subject=My%20website" class="button">Hire Jordynn</a>
   </div>
 
   <!-- web portfolio/skills -->
@@ -217,84 +259,84 @@
     <!-- closing portfolio -->
   </div>
 
-  <!-- skills -->
-  <h3 id="skills">
-    Skills
-  </h3>
+  <div class="skill">
+    <!-- skills -->
+    <h3 id="skills">
+      Skills
+    </h3>
 
-  <center>
-      <div class="container">
-      <div>
+    <div class="skillicons">
+      <div class="row">
         <div class="col-md-1 col-xs-0"></div>
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class='fas fa-code' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">HTML</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class='fab fa-css3' style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">CSS</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <span class="glyphicon glyphicon-bold" style="font-size:50px" id="contacticon"></span>
           <br>
           <p class="contacttext">Bootstrap</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fab fa-js-square" style="font-size:60px" id="contacticon"></i>
           <br>
-          <p class="contacttext" >Javascript</p>
+          <p class="contacttext">Javascript</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fa fa-phone" style="font-size:50px" id="contacticon"></i>
           <br>
-          <p class="contacttext" >APIs</p>
+          <p class="contacttext">APIs</p>
         </div>
 
-        <div class="col-md-1 col-xs-4"></div>
+        <div class="col-md-1 col-xs-0"></div>
       </div>
 
-      <div>
+      <div class="row">
         <div class="col-md-1 col-xs-0"></div>
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fas fa-database" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">MongoDB/Mongoose</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fas fa-table" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">mySQL/Sequelize</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
-          <i class="fab fa-node-js" style="font-size:60px" id="contacticon"></i>
+        <div class="col">
+          <i class="fab fa-node-js" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">nodeJS/Express</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fab fa-react" style="font-size:50px" id="contacticon"></i>
           <br>
           <p class="contacttext">React</p>
         </div>
 
-        <div class="col-md-2 col-xs-4">
+        <div class="col">
           <i class="fa fa-camera" style="font-size:50px" id="contacticon"></i>
           <br>
-          <p class="contacttext" >Photoshop</p>
+          <p class="contacttext">Photoshop</p>
         </div>
 
-        <div class="col-md-1"></div>
+        <div class="col-md-1 col-xs-0"></div>
       </div>
     </div>
-  </center>
+  </div>
 
   <!-- art portfolio -->
   <div id="artPage">
@@ -350,9 +392,43 @@
     </h2>
     <hr>
 
-    <h5 class="contact">I would love to hear from you.</h5>
+    <!-- <h5 class="contact">I would love to hear from you.</h5> -->
 
-    <div class="row" id="contactrowone">
+    <div class="row" id="contact">
+      <div class="col">
+        <div class="contact">
+          <h4 class="contacttitle">Reach</h4>
+          <hr class="line">
+          <i class="fas fa-envelope"></i>
+          <p class="contacttext2">jordynn.otto@gmail.com</p>
+          <i class="fas fa-mobile-alt"></i>
+          <p class="contacttext2">206-909-5153</p>
+          <i class="fas fa-map-marker-alt"></i>
+          <p class="contacttext2">Seattle, WA</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="contact">
+          <h4 class="contacttitle">Stalk</h4>
+          <hr class="line">
+          <i class="fab fa-instagram"></i><br>
+          <a href="https://www.instagram.com/jottobot" class="contacttext" target="_blank">@jottobot</a><br>
+          <i class="fab fa-linkedin"></i><br>
+          <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" class="contacttext"
+            target="_blank">www.linkedin.com</a><br>
+        </div>
+      </div>
+      <div class="col">
+        <div class="contact2">
+          <h4 class="contacttitle">Learn</h4>
+          <hr class="line">
+          <a href="assets/Jordynn Otto Resume.pdf" class="contacttext" target="_blank">Resume</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="row" id="contactrowone">
       <div class="col-2 col-xs-0"></div>
       <div class="col-md-4 col-xs-3">
         <i class="fa fa-phone" style="font-size:48px" id="contacticon"></i>
@@ -390,7 +466,7 @@
       </div>
       <div class="col-md-2"></div>
     </div>
-  </div>
+  </div> -->
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
