--- a/index.html
+++ b/index.html
@@ -81,35 +81,30 @@
         <p id="summary">
           Jordynn Otto is a Seattle born and Los Angeles bred woman of many talents. Currently, she is focused on her
           career in front-end web development. Her clients span across colleagues, friends and referrals and she prides
-          herself on turning the client's wants into a fulfilled cohesive application. Jordynn has a unique and fresh
+          herself on turning her client's wants into a fulfilled cohesive application. Jordynn has a unique and fresh
           eye for
-          design which marries her perfectionist and detailed-oriented personality eloquently. Communicating with others
-          is joyous for Jordynn due to her bubbly, outgoing sense of self.
-
-          <!-- Jordynn Otto is a Seattle born and Los Angeles bred woman of many talents. Currently, she is focused on her career in front-end web development. Her clients span across colleagues, friends and referrals and she prides herself on turning the client's wants into a fulfilled cohesive application. Jordynn has a unique and fresh eye for design, which marries her perfectionist and detailed-oriented personality eloquently. Communicating with others is joyous for Jordynn due to her bubbly, outgoing sense of self. -->
-
-          <br>
+          design, which marries her perfectionist and detailed-oriented personality eloquently. Communicating with
+          others
+          is joyous for Jordynn due to her bubbly, outgoing personality.
           <br>
       </div>
       <div class="col">
         <p id="summary">
           Post cum laude college graduation from Loyola Marymount University, Jordynn lived and worked in Los Angeles as
           a professional dancer. Her career experience includes, but is not limited to, dancing for Disney Channel,
-          foregin hip-hop artists, local
+          foreign hip-hop artists, local
           jazz clubs, commercials and feature films. Even though her career was booming, Jordynn strongly believes in
-          maximizing her potential and she soon
+          maximizing her potential, and she soon
           learned how
           to shoot dance photography and teach Pure Barre, a group fitness class for adults. By 2018, she felt like her
-          professional career was missing a mental push, somethign to challenge her intellectually every day. So, in
+          professional career was missing a mental push, something to challenge her intellectually every day. So in
           pure Jordynn demeanor,
-          she moved back home to Seattle and enrolled, and completed, in a full-stack web development course.
+          she moved back home to Seattle, enrolled in, and completed, a full-stack web development bootcamp.
         </p>
-        <br>
         <br>
         <p class="textquote">
           "How you do anything, is how you do everything."
         </p>
-        <br>
         <br>
         <p id="summary">
           Jordynn would be an irreplacable asset to any front-end engineering team with her combined development tools,
@@ -261,11 +256,32 @@
 
   <div class="skill">
     <!-- skills -->
-    <h3 id="skills">
+    <h2 id="title">
       Skills
-    </h3>
+    </h2>
+    <hr>
 
-    <div class="skillicons">
+    <div class="row">
+      <div class="col">
+        <p class="skills1">Programming</p>
+        <hr class="line2">
+        <p class="skills2">UI Design, HTML, CSS, JavaScript, jQuery, SQL, Mongo, Node, React, Git, AWS </p>
+      </div>
+      <div class="col">
+        <p class="skills1">Soft</p>
+        <hr class="line2">
+        <p class="skills2">Communication, Motivation, Organization, Scheduling, Positivity, Leadership, Public Speaking
+        </p>
+      </div>
+      <div class="col">
+        <p class="skills1">Miscellaneous</p>
+        <hr class="line2">
+        <p class="skills2">Photoshop, Lightroom, Microsoft Office, Social Media, Photography, Slack, Asana, Video
+          Editing</p>
+      </div>
+    </div>
+
+    <!-- <div class="skillicons">
       <div class="row">
         <div class="col-md-1 col-xs-0"></div>
         <div class="col">
@@ -335,7 +351,8 @@
 
         <div class="col-md-1 col-xs-0"></div>
       </div>
-    </div>
+    </div> -->
+
   </div>
 
   <!-- art portfolio -->
@@ -373,13 +390,13 @@
       <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
         <iframe width="80%" height="80%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-          style="position:absolute; top:0; left: 0"></iframe>
+          style="position:absolute; top:0; left: 0" id="dancing"></iframe>
       </div>
 
       <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%" id="youtube">
         <iframe width="80%" height="80%" src="https://www.youtube.com/embed/BRoeecMjRXY" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
-          style="position:absolute; top:0; left: 0"></iframe>
+          style="position:absolute; top:0; left: 0" id="dancing"></iframe>
       </div>
     </div>
 
@@ -391,8 +408,6 @@
       Contact
     </h2>
     <hr>
-
-    <!-- <h5 class="contact">I would love to hear from you.</h5> -->
 
     <div class="row" id="contact">
       <div class="col">
@@ -409,20 +424,23 @@
       </div>
       <div class="col">
         <div class="contact">
-          <h4 class="contacttitle">Stalk</h4>
+          <h4 class="contacttitle">Discover</h4>
           <hr class="line">
           <i class="fab fa-instagram"></i><br>
           <a href="https://www.instagram.com/jottobot" class="contacttext" target="_blank">@jottobot</a><br>
-          <i class="fab fa-linkedin"></i><br>
+          <i class="fab fa-linkedin" id="fab2"></i><br>
           <a href="https://www.linkedin.com/in/jordynn-otto-861918173/" class="contacttext"
             target="_blank">www.linkedin.com</a><br>
+          <i class="fab fa-youtube" id="fab2"></i><br>
+          <a href="https://www.youtube.com/channel/UCx91-fkJVP0-Cu7kmM9OPjA" class="contacttext"
+            target="_blank">www.youtube.com</a><br>
         </div>
       </div>
       <div class="col">
         <div class="contact2">
           <h4 class="contacttitle">Learn</h4>
           <hr class="line">
-          <a href="assets/Jordynn Otto Resume.pdf" class="contacttext" target="_blank">Resume</a>
+          <a href="assets/Jordynn Otto Resume.pdf" class="contacttext3" target="_blank">Resume</a>
         </div>
       </div>
     </div>
@@ -481,9 +499,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
-  <!-- container div -->
-  <!-- </div> -->
 
 </body>
 
