--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="col">
         <p class="skills1">Soft</p>
         <hr class="line2">
-        <p class="skills2">Communication, Motivation, Organization, Scheduling, Positivity, Leadership, Public Speaking
+        <p class="skills2">Communication, Multi-Tasking, Organization, Time Management, Positivity, Leadership, Public Speaking
         </p>
       </div>
       <div class="col">
@@ -385,7 +385,7 @@
       </div>
     </div>
 
-    <!-- youtube videos -->
+    <!-- youtube videos
     <div class="youTube">
       <div class="youtube" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
         <iframe width="80%" height="80%" src="https://www.youtube.com/embed/Q8Oez3MPE54" frameborder="0"
@@ -398,7 +398,7 @@
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
           style="position:absolute; top:0; left: 0" id="dancing"></iframe>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
