--- a/index.html
+++ b/index.html
@@ -175,25 +175,23 @@
               target="_blank">Github</a>
           </div>
         </div>
-        <!-- CoLab -->
-        <!-- <div class="card">
+        <!-- Laura -->
+        <div class="card">
           <div class="zoom">
-            <a href="#" target="_blank">
-              <img class="card-img-top" src="#" alt="Image of app"></a>
+            <a href="http://lauraannsmyth.com" target="_blank">
+              <img class="card-img-top" src="images/Screen Shot 2019-10-08 at 1.05.26 PM.png" alt="Image of app"></a>
             </a>
           </div>
           <div class="card-body">
-            <h5 class="card-title">CoLab</h5>
-            <p class="card-text">Finding a fellow artist to collaborate with is now easy.</p>
-            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, MongoDB/Mongoose, React, Express, Google
-              authorization and API
-              documentation. </p>
+            <h5 class="card-title">Laura Ann Smyth</h5>
+            <p class="card-text">Dance Educator</p>
+            <p class="card-text">Uses HTML, CSS, Bootstrap, jQuery, JavaScript.</p>
           </div>
           <div class="card-footer">
-            <a href="https://github.com/zenwattage/CoLab" class="btn btn-primary" id="cardbutton"
+            <a href="https://github.com/jottobot/laurasmyth" class="btn btn-primary" id="cardbutton"
               target="_blank">Github</a>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
     <div class="row" id="projectcards2">
