--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
         </p>
         <br>
         <p id="summary">
-          Jordynn would be an irreplacable asset to any front-end engineering team with her combined development tools,
-          artistic skills and communication expertise. Focusing on detail, yet being a flexible and easy group memeber
+          Jordynn would be an irreplaceable asset to any front-end engineering team with her combined development tools,
+          artistic skills and communication expertise. Focusing on detail, yet being a flexible and easy group member
           sets her
-          apart from other developers due to her immense imersion in the arts. Jordynn is passionate about everything
-          she does and tends to go above and beyound what is asked of her. From dancer, photographer, fitness
-          instructor, and now software enginner, let Jordynn take care of any of your devlopement needs.
+          apart from other developers due to her immense immersion in the arts. Jordynn is passionate about everything
+          she does and tends to go above and beyond what is asked of her. From dancer, photographer, fitness
+          instructor, and now software engineer, let Jordynn take care of any of your development needs.
         </p>
       </div>
 
@@ -412,8 +412,8 @@
         <div class="contact">
           <h4 class="contacttitle">Reach</h4>
           <hr class="line">
-          <i class="fas fa-envelope"></i>
-          <p class="contacttext2">jordynn.otto@gmail.com</p>
+          <i class="fas fa-envelope"></i><br>
+          <a href="mailto:jordynn.otto@gmail.com?Subject=My%20website" class="contacttext2">jordynn.otto@gmail.com</a><br><br>
           <i class="fas fa-mobile-alt"></i>
           <p class="contacttext2">206-909-5153</p>
           <i class="fas fa-map-marker-alt"></i>
